--- a/backend/package.json
+++ b/backend/package.json
@@ -27,7 +27,9 @@
     "@nestjs/microservices": "^11.1.6",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/platform-socket.io": "^11.1.6",
     "@nestjs/typeorm": "^11.0.0",
+    "@nestjs/websockets": "^11.1.6",
     "bcryptjs": "^3.0.2",
     "ioredis": "^5.7.0",
     "kafkajs": "^2.2.4",
